fix #58 and java compat